# Anny

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: nginx-http.conf  nginx-https.conf
docs/: AI-DLC-CASE-STUDY.md  REQUIREMENTS.md  TRACEABILITY-MATRIX.md  USER-STORIES.md
docs/budget/: BUDGET.md
docs/captains_log/: caplog-20260218-225607-bolt5-hardening-and-v040.txt  caplog-20260220-105828-bolt7-observability-v060.txt  caplog-20260220-140245-bolt8-phase3-features-v070.txt  caplog-20260220-150522-motherhen-compliance-fix.txt  caplog-20260220-162531-security-audit-round2-v050.txt  caplog-20260220-180000-bolt9-ops-readiness-v080.txt  caplog-20260221-100000-post-v090-repo-cleanup.txt  caplog-20260221-223704-five-persona-review-fixes.txt
docs/insights/: 16-month-analytics-audit.md  16-month-performance-summary.md  5-strengths-of-member-solutions.md
docs/key_findings/: 20260306-Codebase-Cleanup-Staff-Engineer-Panel.md
docs/manuals/: DEPLOY-TLDR.md  DR-PLAN.md  INCIDENT-RESPONSE.md  MCP-REMOTE-SETUP.md  MCP-STDIO-SETUP.md  RELEASE_RUNBOOK.md  SERVICE-ACCOUNT-SETUP.md
docs/pm/: BACKLOG.md  CURRENT-SPRINT.md  FRAMEWORK.md  SPRINT-LOG.md
docs/reviews/: 20260221-five-persona-code-review.txt
docs/security/: 20260220-143000-security-audit.txt  20260220-180000-security-audit.txt  20260305-120000-security-audit.txt  security-audit-2026-02-17.md
docs/standards/: CALLHERO-AI-DLC-CASE-STUDY.md  CICD-DEPLOYMENT-PROPOSAL.md  COST-MANAGEMENT-GUIDE.md  CROSS-SKILL-MATRIX.md  INFRASTRUCTURE-PLAYBOOK.md  MULTI-DEVELOPER-GUIDE.md  (+3 more)
scripts/: backup.sh  config-get  deploy.sh  server-provision.sh  server-setup.sh  smoke_test.sh  ssl-setup.sh  uptime_monitor.sh
src/anny/: main.py  (+2 more)
tests/: conftest.py
(+69 files in other folders)
